SFUSA/force-app/main/default/objects/Stave__c/fields/Barrel_Recipe__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Recipe__c</fullName>
        <label>Barrel Recipe</label>
        <referenceTo>Barrel_Recipe__c</referenceTo>
        <relationshipLabel>Staves</relationshipLabel>
        <relationshipName>Staves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>